[package]
name = "rdkit-rust-sys"
version = "0.1.0"
authors = ["Guillaume Charifi-Hoareau <guillaume.charifi@sfr.fr>"]
edition = "2021"
publish = false
build = "build.rs"

[lib]
name = "rdkit_rust_sys"
path = "src/lib.rs"

[build-dependencies]
bindgen = "0.69.1"
itertools = "0.12.0"
pkg-config = "0.3"
walkdir = "2.4"

[profile.release]
debug = true
lto = true
